--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,29 @@ cs50
 Flask
 Flask-Session
 requests
+blinker==1.8.2
+cachelib==0.13.0
+certifi==2024.8.30
+charset-normalizer==3.4.0
+click==8.1.7
+colorama==0.4.6
+cs50==9.4.0
+Flask==3.0.3
+Flask-Session==0.8.0
+greenlet==3.1.1
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.4
+MarkupSafe==3.0.2
+msgspec==0.18.6
+packaging==24.1
+pytz==2024.2
+requests==2.32.3
+SQLAlchemy==2.0.36
+sqlparse==0.5.1
+termcolor==2.5.0
+typing_extensions==4.12.2
+urllib3==2.2.3
+Werkzeug==3.0.4
+wheel==0.44.0
+gunicorn==19.7.1
